3.2.6 (2017-02-DD)
------------------

Enhancements
 - [web] show locale codes beside language names in Preferences module
 - [web] fixed visual glitches in Month view with Firefox
 - [web] mail editor can now be expanded horizontally and automatically expands vertically
 - [web] compose a new message inline or in a popup window
 - [web] allow to select multiple files when uploading attachments (#3999)

Bug fixes
 - [core] remove all alarms before sending IMIP replies (#3925)
 - [web] fixed rendering of forwared HTML message with inline images (#3981)
 - [web] fixed pasting images in CKEditor using Chrome (#3986)

3.2.5 (2017-01-10)
------------------

New features
 - [web] download attachments of a message as a zip archive

Enhancements
 - [core] improved IMIP handling from Exchange/Outlook clients
 - [web] prevent using localhost on additional IMAP accounts
 - [web] renamed buttons of alarm toast (#3945)
 - [web] load photos of LDAP-based address books in contacts list (#3942)
 - [web] added SOGoMaximumMessageSizeLimit to limit webmail message size
 - [web] added photo support for LDIF import (#1084)
 - [web] updated CKEditor to version 4.6.1

Bug fixes
 - [core] honor blocking wrong login attempts within time interval (#2850)
 - [core] better support for RFC 6638 (schedule-agent)
 - [core] use source's domain when none defined and trying to match users (#3523)
 - [core] handle delegation with no SENT-BY set (#3368)
 - [core] properly honor the "include in freebusy" setting (#3354)
 - [core] properly save next email alarm in the database (#3949)
 - [core] fix events in floating time during CalDAV's PUT operation (#2865)
 - [core] handle rounds in sha512-crypt password hashes
 - [web] fixed confusion between owner and active user in ACLs management of Administration module
 - [web] fixed JavaScript exception after renaming an address book
 - [web] fixed Sieve folder encoding support (#3904)